--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.4.5",
+    "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.5",
+    "@nestjs/jwt": "^8.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^9.1.0",
     "@nestjs/passport": "^8.2.1",
@@ -32,6 +34,7 @@
     "class-validator": "^0.13.2",
     "mongoose": "^6.3.4",
     "passport": "^0.5.3",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -45,6 +48,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
