--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "easyhome",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-google-login": "^5.2.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.39",
-    "@types/react": "18.0.10",
+    "@types/node": "17.0.41",
+    "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
-    "eslint": "8.16.0",
+    "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
-    "typescript": "4.7.2"
+    "typescript": "4.7.3"
   }
 }
