--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.2.6",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-google-login": "^5.2.2"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
     "@types/node": "17.0.41",
