--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.2.6",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
+    "@redux-devtools/core": "^3.13.1",
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
