--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.2.6",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^2.9.6",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.0",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-redux": "^8.0.2"
+    "react-hook-form": "^7.33.1",
+    "react-redux": "^8.0.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@redux-devtools/core": "^3.13.1",
