--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mongoose": "^6.3.4",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
