--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -3,7 +3,5 @@
   publish = ".next"
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "client/index.html"
   status = 200
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
