--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.154.0",
     "@nestjs/common": "^8.4.5",
     "@nestjs/config": "^2.1.0",
     "@nestjs/core": "^8.4.5",
